<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rtr_local_planner</name>
  <version>0.0.0</version>
  <description>

	rtr_local_planner implements a plugin to the base_local_planner. This the robot will follow the global path as it is, without creating a local path.   

  </description>

  <maintainer email="aj.sampathk@gmail.com">Abhijith Sampathkrishna</maintainer>

  <license>none</license>

  <author email="aj.sampathk@gmail.com">Abhijith Sampathkrishna</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>

    <nav_core plugin="${prefix}/rtrlp_plugin.xml"/>

  </export>


</package>
